<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pg1"
    android:background="@drawable/bg2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details1"
        android:layout_marginTop="30dp"
        android:layout_marginStart="110dp"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aadhaar_no1"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name1"
        android:layout_marginTop="160dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="10dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_First_no1"
        android:layout_marginTop="240dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_Second_no1"
        android:layout_marginTop="320dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="10dp" />


    <EditText
        android:id="@+id/ei1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="80dp"
        android:autofillHints="Enter Text"
        android:ems="10"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />


    <EditText
        android:id="@+id/ei2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text=""
        android:layout_marginTop="150dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="170dp"
        android:autofillHints="Enter Text"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/ei4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text=""
        android:layout_marginTop="240dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="170dp"
        android:autofillHints="Enter Text"
        android:inputType="textPersonName"
        tools:ignore="LabelFor"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/ei6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text=""
        android:layout_marginTop="310dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="175dp"
        android:autofillHints="Enter Text"
        android:inputType="textPersonName"
        tools:ignore="LabelFor"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/button1"
        android:backgroundTint="@null"
        android:stateListAnimator="@null"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

   <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn3"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="Cancel"
        android:layout_marginTop="400dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:scaleType="center"
        android:background="@drawable/button1"
        android:layout_marginStart="200dp"
        android:textColor="@color/black"/>

</RelativeLayout>